<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/white"
        tools:context="ui.main.ProfileFragment"
        tools:ignore="RtlHardcoded">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".25" />


            <TextView
                android:id="@+id/profileHeaderTextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_profile_header"
                app:layout_constraintBottom_toTopOf="@+id/guideline11"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/profile_img"
                android:layout_height="@dimen/profile_img"
                android:src="@drawable/sample_image"
                app:layout_constraintBottom_toTopOf="@+id/guideline11"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintLeft_toLeftOf="@+id/profileHeaderTextView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline11"
                app:layout_constraintVertical_bias="1.0"
                android:background="@drawable/profile_image_background"/>


            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userName"
                app:layout_constraintVertical_bias="1.0">

                <RelativeLayout
                    android:id="@+id/right_rl"
                    android:layout_width="150dp"
                    android:layout_height="400dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:textStyle="bold">

                    <TextView
                        android:id="@+id/level_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/profile_relative_margin"
                        android:text="@string/level" />

                    <TextView
                        android:id="@+id/dep_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/level_textView"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/profile_relative_margin"
                        android:text="@string/department" />

                    <TextView
                        android:id="@+id/total_hours_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/dep_textView"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/profile_relative_margin"
                        android:text="@string/total_hours" />

                    <TextView
                        android:id="@+id/total_gpa_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/total_hours_textView"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/profile_relative_margin"
                        android:text="@string/total_gpa" />

                    <TextView
                        android:id="@+id/total_grade_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/total_gpa_textView"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/profile_relative_margin"
                        android:text="@string/total_grade" />

                    <TextView
                        android:id="@+id/doctor_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/total_grade_textView"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/profile_relative_margin"
                        android:text="@string/doctor_name" />

                    <TextView
                        android:id="@+id/staff_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/doctor_name"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/profile_relative_margin"
                        android:text="@string/staff_name" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/left_lr"
                    android:layout_width="150dp"
                    android:layout_height="400dp"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/right_rl">

                    <TextView
                        android:id="@+id/level_textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/profile_relative_margin"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dep_textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/level_textView2"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/profile_relative_margin"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total_hours_textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/dep_textView2"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/profile_relative_margin"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total_gpa_textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/total_hours_textView2"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/profile_relative_margin"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total_grade_textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/total_gpa_textView2"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/profile_relative_margin"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/doctor_name2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/total_grade_textView2"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/profile_relative_margin"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/staff_name2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/doctor_name2"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/profile_relative_margin"
                        android:textStyle="bold" />
                </RelativeLayout>

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>