<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_soft"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".55" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/loginLeftGuideLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/loginRightGuideLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".75" />

            <ImageView
                android:id="@+id/loginHeadImageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_rectangle_vertical_gradient"
                android:contentDescription="@string/image"
                android:focusable="true"
                app:layout_constraintBottom_toTopOf="@+id/guideline6"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/gray_soft"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline6" />

            <TextView
                android:id="@+id/container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toRightOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userId"
                android:layout_width="0dp"
                android:layout_height="@dimen/ed_height"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/bg_edit_text"
                android:inputType="number|textPostalAddress"
                android:maxLines="1"
                android:gravity="right|center_vertical"
                android:paddingRight="@dimen/ed_padding"
                android:paddingLeft="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text"
                app:layout_constraintLeft_toLeftOf="@+id/container"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toRightOf="@+id/container"
                app:layout_constraintTop_toTopOf="@id/guideline6"
                tools:ignore="Autofill" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginRight="12dp"
                android:background="@drawable/bg_circle_vertical_gradient"
                android:padding="@dimen/img_padding"
                android:src="@drawable/ic_person_id"
                app:layout_constraintBottom_toBottomOf="@+id/userId"
                app:layout_constraintRight_toRightOf="@+id/userId"
                app:layout_constraintTop_toTopOf="@+id/userId"
                app:layout_constraintVertical_bias="0.52" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPassword"
                android:layout_width="0dp"
                android:layout_height="@dimen/ed_height"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/bg_edit_text"
                android:inputType="numberPassword"
                android:gravity="right|center_vertical"
                android:paddingRight="@dimen/ed_padding"
                android:paddingLeft="8dp"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text"
                app:layout_constraintLeft_toLeftOf="@+id/container"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toRightOf="@+id/container"
                app:layout_constraintTop_toBottomOf="@+id/userId"
                tools:ignore="Autofill"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginRight="12dp"
                android:background="@drawable/bg_circle_vertical_gradient"
                android:padding="@dimen/img_padding"
                android:src="@drawable/ic_password"
                app:layout_constraintBottom_toBottomOf="@+id/userPassword"
                app:layout_constraintRight_toRightOf="@+id/userPassword"
                app:layout_constraintTop_toTopOf="@+id/userPassword"
                app:layout_constraintVertical_bias="0.5" />

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="16dp"
                android:layoutDirection="rtl"
                android:checked="true"
                android:text="@string/remember_me"
                app:layout_constraintRight_toRightOf="@+id/container"
                app:layout_constraintTop_toBottomOf="@+id/userPassword" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="20dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/bg_rectangle_corner_gradient"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/container"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/container"
                app:layout_constraintRight_toRightOf="@+id/container"
                app:layout_constraintTop_toBottomOf="@+id/remember_me"
                app:layout_constraintVertical_bias="0.04"
                android:layout_marginBottom="20dp"/>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintLeft_toRightOf="@+id/loginRightGuideLine"
                app:layout_constraintRight_toRightOf="@+id/loginLeftGuideLine"
                app:layout_constraintTop_toTopOf="@+id/loginHeadImageView"
                tools:src="@tools:sample/avatars[0]"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>